# XSharp

./: '  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CMakelists.txt  README.md  build.sh  buildDebug.sh  buildRelease.sh  buildTest.sh  test.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: c-cpp.yml
LLVMIR/: BuiltIn.cpp  BuiltIn.h  CodeGenContext.h  CodeGenHelper.cpp  CodeGenHelper.h  CodeGenProxy.cpp  CodeGenProxy.h  CodeGenerator.cpp  CodeGenerator.h  LLVMHelper.c  LLVMHelper.cpp  LLVMHelper.h  LLVMTypes.cpp  LLVMTypes.h  Optimizer.cpp  Optimizer.h  Target.cpp  Target.h  Utils.cpp  Utils.h
LLVMIR/BinaryOp/: ArithmeticOpImpl.cpp  ArithmeticOpImpl.h  BinaryOpProxy.cpp  BinaryOpProxy.h  LogicalOpImpl.cpp  LogicalOpImpl.h
LLVMIR/ClassProxy/: ClassProxy.cpp  ClassProxy.h  ConstructorProxy.cpp  ConstructorProxy.h  IndexProxy.cpp  IndexProxy.h  MemberExprProxy.cpp  MemberExprProxy.h  MemberMethodProxy.cpp  MemberMethodProxy.h
LLVMIR/ControlFlow/: ControlFlowProxies.cpp  ControlFlowProxies.h
LLVMIR/FuncProxies/: CallProxy.cpp  CallProxy.h  FuncDefinitionProxies.cpp  FuncDefinitionProxies.h
LLVMIR/UnaryOP/: UnaryOpImpl.cpp  UnaryOpImpl.h  UnaryOpProxy.cpp  UnaryOpProxy.h
LLVMIR/VarDefinition/: VarDefinitionProxies.cpp  VarDefinitionProxies.h
LLVMIR/test/: arithmetic.xsharp  arithmetic.xsharp.ll  class.xsharp.ll  helloworld.xsharp.ll  if.xsharp.ll  isprime.xsharp.ll  recursive.xsharp.ll  string.xsharp.ll  types.xsharp.ll
Testing/Temporary/: CTestCostData.txt
XSharp/: ASTNodes.cpp  ASTNodes.h  Assoc.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  OperInfo.h  Parser.cpp  Parser.h  Semantics.cpp  Semantics.h  SharedData.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  Tokens.cpp  Tokens.h  Type.cpp  Type.h  TypeSystem.cpp  TypeSystem.h  XSharpContext.h  XSharpEngine.cpp  XSharpEngine.h  XSharpUtils.cpp  XSharpUtils.h  XString.cpp  XString.h  xsharp_global.h
XSharp/Class/: ClassAST.cpp  ClassAST.h  XClass.cpp  XClass.h  XObject.cpp  XObject.h
XSharp/ControlFlow/: ControlFlowAST.cpp  ControlFlowAST.h
XSharp/Parser/: ParseClass.cpp
XSharp/Types/: Type.cpp  Type.h  TypeAdapter.cpp  TypeAdapter.h  TypeConverter.cpp  TypeConverter.h  TypeNodes.cpp  TypeNodes.h  TypeSystem.cpp  TypeSystem.h
XSharp/test/Lexer/: arithmetic.xsharp_tokens.txt  class.xsharp  class.xsharp_tokens.txt  helloworld.xsharp  helloworld.xsharp_tokens.txt  if.xsharp_tokens.txt  isprime.xsharp_tokens.txt  recursive.xsharp_tokens.txt  string.xsharp  string.xsharp_tokens.txt  types.xsharp_tokens.txt
XSharp/test/Parser/: arithmetic.xsharp_ast.txt  class.xsharp_ast.txt  helloworld.xsharp_ast.txt  if.xsharp  if.xsharp_ast.txt  isprime.xsharp_ast.txt  recursive.xsharp  recursive.xsharp_ast.txt  string.xsharp_ast.txt  types.xsharp_ast.txt
XSharpCLI/: astprint.cpp  tokenize.cpp  xsharpc.cpp
XSharpRuntime/: CMakeLists.txt  CTestTestfile.cmake  array.h  io.cpp  io.h
XSharpRuntime/GC/: gc_manager.h  xsharp_gc.cpp  xsharp_gc.h
docs/: intro.md
docs/syntax/: variable.md
test/: CMakeLists.txt  test.cpp  test_llvm.cpp  test_utils.cpp  update-test.py  xsharp-test.py
testcases/: arithmetic.xsharp  class  class.xsharp  class.xsharp.bc  class.xsharp.out  helloworld.xsharp  if.xsharp  isprime  isprime.xsharp  isprime.xsharp.bc  recursive  recursive.xsharp  recursive.xsharp.bc  recursive.xsharp.out  string  string.xsharp  string.xsharp.bc  types  types.xsharp  types.xsharp.bc
